--- a/eda-blockchain.properties
+++ b/eda-blockchain.properties
@@ -1,5 +1,5 @@
-path.variable.kotlin_bundled=C\:\\Program Files\\JetBrains\\IntelliJ IDEA 2017.1.4\\plugins\\Kotlin\\kotlinc
-path.variable.maven_repository=C\:\\Users\\Bianca\\.m2\\repository
-jdk.home.1.8=C\:/Program Files/Java/jdk1.8.0_131
-idea.home=C\:\\Program Files\\JetBrains\\IntelliJ IDEA 2017.1.4
+path.variable.kotlin_bundled=C\:\\Program Files (x86)\\JetBrains\\IntelliJ IDEA 2016.3.5\\plugins\\Kotlin\\kotlinc
+path.variable.maven_repository=C\:\\Users\\cderienzo\\.m2\\repository
+jdk.home.1.8=C\:/Program Files (x86)/Java/jdk1.8.0_121
+idea.home=C\:\\Program Files (x86)\\JetBrains\\IntelliJ IDEA 2016.3.5
 javac2.instrumentation.includeJavaRuntime=false
